@@ -1,4 +1,4 @@
-@import url(//fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,600,700,400italic,300italic);
+@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,600,700,400italic,300italic);
 body {
   font-family: "Source Sans Pro", sans-serif;
   font-weight: 300;
