@@ -1,5 +1,5 @@
-@import url(//fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,600,400italic,300italic);
-@import url(//fonts.googleapis.com/css?family=Crimson+Text:600,700,400italic,400);
+@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,600,400italic,300italic);
+@import url(https://fonts.googleapis.com/css?family=Crimson+Text:600,700,400italic,400);
 body {
   font-family: "Source Sans Pro", sans-serif;
   font-weight: 300;
