@@ -2,7 +2,7 @@ name = Stanford Light
 base theme = open_framework
 description = Stanford-branded subtheme of <a href="http://openframework.stanford.edu">Open Framework</a>, provided by <a href="http://webservices.stanford.edu">Stanford Web Services</a>. Learn more at the <a href="http://drupalthemes.stanford.edu">Drupal Themes website</a>.
 core = 7.x
-version = 7.x-1.0
+version = 7.x-1.1
 
 stylesheets[all][] = css/stanford-light.css
 scripts[] = js/stanford-light.js
